--- a/src/Contoso.AdtFunctions/Contoso.AdtFunctions.csproj
+++ b/src/Contoso.AdtFunctions/Contoso.AdtFunctions.csproj
@@ -12,6 +12,9 @@
     <PackageReference Include="System.Net.Http" Version="4.3.4" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\ConsoleApp1\AzureDigitalTwinsPatchConverter.csproj" />
+  </ItemGroup>
+  <ItemGroup>
     <None Update="host.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
